--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
+    "papaparse": "^5.5.3",
     "vue": "^3.5.17",
     "xlsx": "^0.18.5"
   },
