--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
     "vite": "^7.0.4"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
