--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "file-saver": "^2.0.5",
     "papaparse": "^5.5.3",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "vue": "^3.5.17",
     "xlsx": "^0.18.5"
   },
